@@ -23,6 +23,8 @@
 - added: `SchemaBuilder.transform2(name, options, callback)` skips preparing and validation
 - added: `SchemaBuilder.operation2(name, options, callback)` skips preparing and validation
 - added: `ErrorBuilder.exception(message)` - adds a new exception message
+- added: `F.findConnection()` finds a websocket connection
+- added: `F.findConnections()` finds websocket connections
 
 - updated: (IMPORTANT) Array.async([NEW: threadCount (Number)], [callback]) supports `threads`
 - updated: (IMPORTANT) Array.wait(onItem(item, index), [callback], [threadCount]) supports `threads`
